<resources>
    <string name="app_name">SuperSexiBoys</string>
    <string name="inicio_de_sesion">INICIO DE SESIÓN</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="contrasenia">CONTRASEÑA</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">REGISTRO</string>
    <string name="aceptar">Aceptar</string>
    <string name="e_mail">E-MAIL</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="agregando_tarea">AGREGANDO TAREA</string>
    <string name="agregar_titulo_tarea">TITULO</string>
    <string name="agregar_descripcion_tarea">DESCRIPCION</string>
    <string name="agregar_hora_tarea">(Horas:Minutos)</string>
    <string name="nombre_del_usuario">Nombre Usuario</string>
    <string name="tiempo_limite">Tiempo Limite</string>
    <string name="texto_eqtiquetas">Etiquetas</string>
    <string name="texto_plus">+</string>
    <string name="texto_guardar">Guardar</string>
    <string name="tarea_en_proceso">Tarea en proceso</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="tareas_terminadas">Tareas Terminadas</string>
    <string name="lista_tareas">Lista de tareas</string>
    <string name="titulo_items">Titulo de Item</string>
    <string name="descrip_items">Descripcion</string>
    <string name="hora_items">00:00</string>
    <string name="terminadas_volver">VOLVER</string>
    <string name="terminadas_historial">TAREAS TERMINADAS</string>
    <string name="avatar_imagen">IMAGEN DE PERFIL</string>
    <string name="ir_a_pantalla_de_inicio">IR A PANTALLA DE INICIO</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="agregando_habito">AGREGANDO HÁBITO</string>
    <string name="frecuencia">Frecuencia:</string>
    <string name="diario">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="etiquetas_opcional">Etiquetas (Opcional)</string>
    <string name="agregar_etiqueta">Agregar etiqueta</string>
    <string name="guardar">Guardar</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="habitos">HÁBITOS</string>
    <string name="metas">METAS</string>
    <string name="tareas">TAREAS</string>
    <string name="nuevo_habito">Nuevo Hábito</string>
    <string name="login">LOGIN</string>
    <string name="titulo">Título</string>
    <string name="descripcion_opcional">Descripción (Opcional)</string>
    <string name="num_ej_2">Num(Ej. 2)</string>
    <string name="nombre_de_etiqueta">Nombre de etiqueta</string>
    <string name="comunidades">Comunidades</string>
    <string name="comunidadesM">COMUNIDADES</string>
    <string name="empezar_habito">Empezar Hábito</string>
    <string name="habito_debil">(Hábito débil)</string>
    <string name="_0_1">0/1</string>
    <string name="ya_lo_hice">Ya lo hice</string>
    <string name="rep_1">1</string>
    <string name="upb">UPB</string>
    <string name="leer_todos_los_dias">LEER TODOS LOS DÍAS</string>



    <string name="btn_habitos"> HÁBITOS </string>
    <string name="btn_metas"> METAS </string>
    <string name="btn_tareas"> TAREAS </string>

    <string name="titulo_meta"> TÍTULO </string>
    <string name="texto_metas_actividades"> Actividad </string>
    <string name="texto_meta_etiqueta"> Etiqueta </string>
    <string name="descripcion_meta"> Descripcion </string>

    <string name="btn_comunidades"> Comunidades </string>
    <string name="btn_metasComp"> Metas Completadas </string>
    <string name="btn_nuevaMeta"> Nueva Meta </string>

    <string name="agregar_meta"> AGREGANDO META </string>
    <string name="fecha_inicio1"> Fecha de inicio: </string>
    <string name="fecha_inicio_meta"> dd/mm/aa </string>
    <string name="fecha_limite1"> Fecha límite:  </string>
    <string name="fecha_limite_meta"> dd/mm/aa </string>
    <string name="etiqueta1"> Etiqueta </string>
    <string name="actividades1"> Actividades </string>
    <string name="botonplus"> + </string>
    <string name="btnGuardarMeta"> Guardar </string>
    <string name="procentaje"> 00% </string>
    <string name="checkbox_meta"> Actividad </string>
    <string name="metas_completadas"> METAS COMPLETADAS </string>
    <string name="metaterminada_creado"> Creado en:   </string>
    <string name="metaterminado_finalizado"> Finalizado en:  </string>
    <string name="meta_terminada"> ✓  </string>
    <string name="name_app"> HABÍTICA  </string>




</resources>