<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="#11676a">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textoMeta"
                android:text="@string/titulo_meta"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/actividades"
                android:textSize="18dp"
                android:text="@string/texto_metas_actividades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#EBC335"/>


            <TextView
                android:id="@+id/etiqueta"
                android:text="@string/texto_meta_etiqueta"
                android:textSize="14dp"
                android:textColorHint="#f28d00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#f28d00" />

        </LinearLayout>

        <TextView
            android:id="@+id/textoPorcentaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:text="@string/procentaje"
            >

        </TextView>
    </LinearLayout>

</androidx.cardview.widget.CardView>