<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:clickable="true"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:background="#11676a">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/tituloMeta"
                    android:text="@string/titulo_meta"
                    android:layout_gravity="center"
                    android:textColorHint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#2339a8"
                    app:cardCornerRadius="12dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        >

                        <TextView
                            android:id="@+id/descripcionMeta"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/descripcion_meta"
                            android:padding="10dp"
                            android:textColor="#d8e4ff" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#A82323"
                    app:cardCornerRadius="12dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        >

                        <TextView
                            android:id="@+id/terminado"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="@string/meta_terminada"
                            android:padding="10dp"
                            android:textColor="#d8e4ff"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etiqueta1"
                android:textColorHint="#f28d00"
                android:textColor="#FBB948"
                android:textSize="18dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metaterminada_creado"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/fechaCreacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_inicio_meta"
                    android:textColor="@color/white"
                    android:textSize="25dp"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metaterminado_finalizado"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/fechaFinalizacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_limite_meta"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>







