<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    tools:context=".HabitosActivity">


    <TextView
        android:id="@+id/agrega_habito_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/agregando_habito"
        android:textSize="25sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/agrega_habito_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/plomo_oscuro"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/bloque_agregar_habito"
        app:layout_constraintTop_toBottomOf="@+id/linea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:background="@color/verde_oscuro"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_titulo"
                        android:background="@color/verde_claro"
                        android:hint="@string/titulo"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            
            <androidx.cardview.widget.CardView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_descripcion"
                        android:background="@color/verde_claro"
                        android:hint="@string/descripcion_opcional"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_frecuencia"
                app:layout_constraintBottom_toBottomOf="@+id/button_diario"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:text="@string/frecuencia"/>
            <Button
                android:id="@+id/button_diario"
                android:layout_margin="5dp"
                app:layout_constraintStart_toEndOf="@id/text_frecuencia"
                app:layout_constraintTop_toBottomOf="@+id/descripcion"
                android:backgroundTint="@color/azul_pastel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diario"/>
            <Button
                android:id="@+id/button_semanal"
                android:layout_margin="5dp"
                app:layout_constraintStart_toEndOf="@+id/button_diario"
                app:layout_constraintTop_toBottomOf="@+id/descripcion"
                android:backgroundTint="@color/azul_pastel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semanal"/>

            <TextView
                android:id="@+id/text_repeticiones"
                app:layout_constraintBottom_toBottomOf="@+id/cardview_rep"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:text="@string/repeticiones"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_rep"
                android:layout_width="wrap_content"
                android:layout_marginTop="7dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintTop_toBottomOf="@+id/text_frecuencia"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_repeticiones"
                        android:layout_width="wrap_content"
                        android:padding="5dp"
                        android:hint="@string/num_ej_2"
                        android:gravity="center"
                        android:background="@color/celeste"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>




            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/nombre_etiqueta"
                app:layout_constraintTop_toBottomOf="@+id/text_repeticiones"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/etiquetas_opcional"
                android:textSize="25sp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/nombre_etiqueta_edit_text"
                android:layout_width="match_parent"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/nombre_etiqueta"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/nombre_de_etiqueta"
                        android:layout_width="match_parent"
                        android:hint="@string/nombre_de_etiqueta"
                        android:gravity="center"
                        android:background="@color/celeste"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@+id/agregar_etiqueta_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/recycler_etiquetas"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/agregar_etiqueta_button"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/nombre_etiqueta_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:text="@string/agregar_etiqueta"
                android:backgroundTint="@color/azul_oscuro"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/guardar_habito"
        app:layout_constraintTop_toBottomOf="@+id/bloque_agregar_habito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/guardar"
        android:layout_margin="15dp"
        android:backgroundTint="@color/azul_oscuro"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>