<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MetasActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#6DC8E6"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"

        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/identifica_usuario"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:weightSum="10"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/ver_perfil_button"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:text="@string/ver_perfil"
                    android:backgroundTint="@color/verde_oscuro"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/imagen_perfil"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="40dp"
                    android:src="@drawable/perfilvacio"/>
            </LinearLayout>


            <Button
                app:layout_constraintTop_toBottomOf="@+id/identifica_usuario"
                app:layout_constraintEnd_toStartOf="@+id/metas_button"
                android:layout_width="wrap_content"
                android:text="@string/btn_habitos"
                android:layout_margin="15dp"
                android:backgroundTint="@color/azul_pastel"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/metas_button"
                app:layout_constraintTop_toBottomOf="@+id/identifica_usuario"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:text="@string/btn_metas"
                android:layout_margin="15dp"
                android:backgroundTint="@color/azul_oscuro"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/tareas_button"
                app:layout_constraintTop_toBottomOf="@+id/identifica_usuario"
                app:layout_constraintStart_toEndOf="@id/metas_button"
                android:layout_width="wrap_content"
                android:text="@string/btn_tareas"
                android:layout_margin="15dp"
                android:backgroundTint="@color/azul_pastel"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/linea"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toBottomOf="@+id/metas_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/plomo_oscuro"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                >

                <TextView
                    android:id="@+id/text_view_rojo"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:background="#11676A"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:clickable="true"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:background="#11676a">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/textoMeta"
                            android:text="@string/titulo_meta"


                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/actividades"
                            android:textSize="18dp"
                            android:text="@string/texto_metas_actividades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#EBC335"/>


                        <TextView
                            android:id="@+id/etiqueta"
                            android:text="@string/texto_meta_etiqueta"
                            android:textSize="14dp"
                            android:textColorHint="#f28d00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#f28d00" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progresoMeta"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:indeterminate="false"
                            android:max="100"
                            android:progress="36"
                            android:progressTint="@color/celeste" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </TextView>


                    </LinearLayout>



                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.22"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/btnComunidades"
            android:text="@string/btn_comunidades"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/azul_oscuro"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnMetasCompletadas"
            android:text="@string/btn_metasComp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/azul_oscuro"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnNuevaMeta"
            android:text="@string/btn_nuevaMeta"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/azul_oscuro"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
